--- a/package.json
+++ b/package.json
@@ -7,61 +7,58 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export",
-    "build:hostinger": "next build",
-    "deploy:hostinger": "npm run build:hostinger && node scripts/prepare-hostinger.js",
-    "zip:hostinger": "cd out && zip -r ../neyisek-hostinger.zip . && cd ..",
-    "build:firebase": "next build",
-    "deploy:firebase": "npm run build:firebase && firebase deploy",
-    "preview:firebase": "firebase serve"
+    "lint": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next out dist",
+    "analyze": "ANALYZE=true npm run build",
+    "build:production": "npm run clean && npm run type-check && next build",
+    "build:vercel": "next build",
+    "deploy:vercel": "vercel --prod",
+    "preview:vercel": "vercel dev"
   },
   "dependencies": {
-    "@google-cloud/bigquery": "^8.1.0",
-    "@google-cloud/firestore": "^7.11.1",
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
-    "@next/bundle-analyzer": "^15.3.3",
-    "@react-email/components": "^0.0.41",
-    "@react-email/render": "^1.1.2",
-    "@testing-library/react": "^16.3.0",
-    "@types/jspdf": "^1.3.3",
-    "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.16",
     "chart.js": "^4.4.9",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
-    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.17.0",
     "html2canvas": "^1.4.1",
-    "jest": "^29.7.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.303.0",
     "next": "^14.0.4",
-    "next-optimized-images": "^2.6.2",
     "nodemailer": "^7.0.3",
-    "playwright": "^1.52.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "react-email": "^4.0.15",
-    "react-google-button": "^0.8.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.15.3",
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.3.3",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^20.10.5",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18.2.17",
-    "archiver": "^7.0.1",
+    "@types/jspdf": "^1.3.3",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "typescript": "^5.3.3"
-  }
+  },
+  "engines": {
+    "node": ">=18.17.0",
+    "npm": ">=9.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
