--- a/vercel.json
+++ b/vercel.json
@@ -1,61 +1,17 @@
 {
   "version": 2,
-  "name": "neyisek",
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
-  
-  "env": {
-    "NODE_ENV": "production"
-  },
-  
-  "build": {
-    "env": {
-      "NODE_ENV": "production",
-      "NEXT_TELEMETRY_DISABLED": "1"
-    }
-  },
-  
-  "functions": {
-    "src/app/api/**/*.ts": {
-      "runtime": "nodejs18.x",
-      "maxDuration": 30
-    }
-  },
-  
-  "regions": ["fra1"],
-  
-  "github": {
-    "autoAlias": true,
-    "silent": true
-  },
-  
-  "headers": [
+  "builds": [
     {
-      "source": "/_next/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-store, max-age=0"
-        }
-      ]
+      "src": "next.config.js",
+      "use": "@vercel/next"
     }
   ],
-  
-  "rewrites": [
-    {
-      "source": "/((?!api|_next|_static|favicon.ico).*)",
-      "destination": "/"
+  "functions": {
+    "api/**.js": {
+      "runtime": "nodejs18.x"
     }
-  ]
+  },
+  "env": {
+    "NODE_ENV": "production"
+  }
 } 
