--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.17.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
@@ -43,11 +44,11 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^15.3.3",
     "@types/google.maps": "^3.58.1",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20.10.5",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18.2.17",
-    "@types/jspdf": "^1.3.3",
-    "@types/nodemailer": "^6.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "typescript": "^5.3.3"
