--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18.2.17",
+    "cssnano": "^6.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "typescript": "^5.3.3"
